    object by parsing a date/time string according to a given format.
  * date_get_last_errors()/DateTime::getLastErrors(): Return a list of warnings
    and errors that were found while parsing a date/time string through:
	- strtotime() / new DateTime
	- date_create_from_format() / DateTime::createFromFormat()
	- date_parse_from_format()

- Added ability to use Traversable objects instead of plain arrays in ext/soap.
  (Joshua Reese, Dmitry)
- Added "?:" operator. (Marcus)
- Added stream_supports_lock() function. (Benjamin Schulz)
- Added msg_queue_exists() function. (Benjamin Schulz)
- Added 3 Firebird specific attributes that can be set via PDO::setAttribute()
  to control formatting of date/timestamp columns: PDO::FB_ATTR_DATE_FORMAT,
  PDO::FB_ATTR_TIME_FORMAT and PDO::FB_ATTR_TIMESTAMP_FORMAT. (Lars W)
- Added gmp_testbit() function from HEAD. (Stas)
- Added icon format support to getimagesize(). (Scott)
- Added LDAP_OPT_NETWORK_TIMEOUT option for ldap_set_option() to allow
  setting network timeout (FR #42837). (Jani)
- Added optional escape character parameter to fgetcsv(). (David Soria Parra)
- Added xsl->setProfiling() for profiling stylesheets. (Christian)
- Added long-option feature to getopt() and made getopt() available also on 
  win32 systems by adding a common getopt implementation into core.
  (David Soria Parra, Jani)
- Added support for namespaces. (Dmitry, Stas, Gregory)
- Added support for Late Static Binding. (Dmitry, Etienne Kneuss)
- Added support for __callstatic() magic method. (Sara)
- Added support for dynamic access of static members using $foo::myFunc().
  (Etienne Kneuss)
- Added "compact" handler for Zend MM storage. (Dmitry)
- Added "+" and "*" specifiers to zend_parse_parameters(). (Andrei)
- Added DateTime::setTimestamp() to set a unix timestamp without
  invoking the date parser. (Scott)

- Removed the experimental RPL (master/slave) functions from mysqli. (Andrey)
- Upgraded PCRE to version 7.5 (Nuno)
